[gd_scene load_steps=14 format=3 uid="uid://3pgtwq1a8uq1"]

[ext_resource type="Script" path="res://scripts/Runner.gd" id="1_oy776"]
[ext_resource type="Texture2D" uid="uid://ddqigjnxiaelf" path="res://assets/background_blue.png" id="1_s43h1"]
[ext_resource type="Theme" uid="uid://2kubj7hhm1i0" path="res://ui/theme.tres" id="2_5eufw"]
[ext_resource type="Script" path="res://scripts/PlayerMovement.gd" id="2_nqim4"]
[ext_resource type="Texture2D" uid="uid://cjgiqyleo0wpv" path="res://assets/bat/bat_up.png" id="2_ny50f"]
[ext_resource type="FontFile" uid="uid://b7yjsaepxijxb" path="res://assets/fonts/Kenney Blocks.ttf" id="3_ger83"]
[ext_resource type="Texture2D" uid="uid://brd0ej2820p38" path="res://assets/bat/bat_flat.png" id="3_h8bao"]
[ext_resource type="Texture2D" uid="uid://0gfpcmh0hv1k" path="res://assets/bat/bat_down.png" id="4_jy4xn"]
[ext_resource type="Script" path="res://scripts/PipeManager.gd" id="7_mlkoy"]
[ext_resource type="Script" path="res://ui/Menus.gd" id="8_kllcw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mtukm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_jy4xn")
}, {
"duration": 1.0,
"texture": ExtResource("3_h8bao")
}, {
"duration": 1.0,
"texture": ExtResource("2_ny50f")
}, {
"duration": 1.0,
"texture": ExtResource("3_h8bao")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cpvvn"]
radius = 5.0
height = 17.3333

[sub_resource type="LabelSettings" id="LabelSettings_814lt"]
font = ExtResource("3_ger83")
font_size = 32
font_color = Color(0.435294, 0.243137, 0.262745, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_oy776")

[node name="BackgroundBlue" type="Sprite2D" parent="."]
position = Vector2(-16, 265)
scale = Vector2(3, 3)
texture = ExtResource("1_s43h1")
centered = false

[node name="Player" type="CharacterBody2D" parent="."]
visible = false
position = Vector2(61, 0)
scale = Vector2(3, 3)
script = ExtResource("2_nqim4")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_mtukm")
frame = 2
frame_progress = 1.0
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(6.51331e-15, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_cpvvn")

[node name="PipeManager" type="Node" parent="."]
script = ExtResource("7_mlkoy")

[node name="Timer" type="Timer" parent="PipeManager"]
wait_time = 2.0

[node name="Pipes" type="Node" parent="PipeManager"]

[node name="Menus" type="CanvasLayer" parent="."]
script = ExtResource("8_kllcw")

[node name="MainMenu" type="GridContainer" parent="Menus"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -121.0
offset_right = 4.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5eufw")

[node name="Title" type="Label" parent="Menus/MainMenu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Flappy Bat"
label_settings = SubResource("LabelSettings_814lt")
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="Menus/MainMenu"]
layout_mode = 2
text = "Play"

[node name="MuteButton" type="Button" parent="Menus/MainMenu"]
layout_mode = 2
text = "Mute"

[node name="QuitButton" type="Button" parent="Menus/MainMenu"]
layout_mode = 2
text = "Quit"

[node name="GameOver" type="GridContainer" parent="Menus"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -121.0
offset_right = 112.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5eufw")

[node name="Title" type="Label" parent="Menus/GameOver"]
layout_mode = 2
size_flags_horizontal = 3
text = "Game Over"
label_settings = SubResource("LabelSettings_814lt")
horizontal_alignment = 1

[node name="Score" type="Label" parent="Menus/GameOver"]
layout_mode = 2
size_flags_horizontal = 3
text = "14"
label_settings = SubResource("LabelSettings_814lt")
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="Menus/GameOver"]
layout_mode = 2
text = "Try Again"

[node name="MainMenuButton" type="Button" parent="Menus/GameOver"]
layout_mode = 2
text = "Main Menu"

[node name="GameUi" type="GridContainer" parent="Menus"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -121.0
offset_right = 112.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5eufw")

[node name="Title" type="Label" parent="Menus/GameUi"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_814lt")
horizontal_alignment = 1

[connection signal="player_dead" from="Player" to="." method="_on_player_player_dead"]
[connection signal="pipe_cleared" from="PipeManager" to="." method="_on_pipe_manager_pipe_cleared"]
[connection signal="timeout" from="PipeManager/Timer" to="PipeManager" method="_on_timer_timeout"]
[connection signal="pressed" from="Menus/MainMenu/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Menus/MainMenu/MuteButton" to="Menus" method="hellloooo"]
[connection signal="pressed" from="Menus/MainMenu/MuteButton" to="Menus" method="_on_mute_button_pressed"]
[connection signal="pressed" from="Menus/MainMenu/QuitButton" to="Menus" method="_on_quit_button_pressed"]
[connection signal="pressed" from="Menus/GameOver/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Menus/GameOver/MainMenuButton" to="Menus" method="_on_main_menu_button_pressed"]
